--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -62,13 +62,13 @@
         </div>
         <ul class="social">
           <li>
-            <a><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/RavenWills4"><i class="fab fa-twitter"></i></a>
           </li>
           <li>
-            <a><i class="fab fa-github"></i></a>
+            <a href="https://github.com/raven-wills"><i class="fab fa-github"></i></a>
           </li>
           <li>
-            <a><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/raven-wills/"><i class="fab fa-linkedin"></i></a>
           </li>
         </ul>
       </main>
