--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-COMPATIBLE" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Raven Wills' personal website"
     <title>Raven Wills - Front-end Developer</title>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand"
