--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-COMPATIBLE" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Raven Wills' personal website"
+    <meta name="description" content="Raven Wills' personal website" />
     <title>Raven Wills - Front-end Developer</title>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand"
@@ -63,13 +63,19 @@
         </div>
         <ul class="social">
           <li>
-            <a href="https://twitter.com/RavenWills4"><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/RavenWills4"
+              ><i class="fab fa-twitter"></i
+            ></a>
           </li>
           <li>
-            <a href="https://github.com/raven-wills"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/raven-wills"
+              ><i class="fab fa-github"></i
+            ></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/raven-wills/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/raven-wills/"
+              ><i class="fab fa-linkedin"></i
+            ></a>
           </li>
         </ul>
       </main>
